# academic-tools-mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: infrastructure.md  pipeline.md  providers.md  server.md
src/academic_tools_mcp/: _clients.py  _http.py  _pdf_download.py  _singleflight.py  _stats.py  acl_anthology.py  arxiv.py  bibtex.py  biorxiv.py  cache.py  cache_search.py  config.py  crossref.py  manual.py  openalex.py  opencitations.py  papers.py  server.py  wikipedia.py
tests/: conftest.py  test_acl_anthology.py  test_arxiv.py  test_audit_features.py  test_bibtex.py  test_biorxiv.py  test_cache.py  test_cache_search.py  test_clients.py  test_concurrency.py  test_crossref.py  test_http.py  test_manual.py  test_openalex.py  test_opencitations.py  test_papers.py  test_pdf_download.py  test_server.py  test_stats.py  test_wikipedia.py
