[project]
name = "academic-tools-mcp"
version = "0.1.0"
description = "MCP server for academic research tools (OpenAlex, etc.)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
]

[project.scripts]
academic-tools-mcp = "academic_tools_mcp.server:mcp.run"

[tool.uv]
package = true

[tool.uv.sources]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/academic_tools_mcp"]
